<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:id="@+id/fragment_container">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/movie_poster_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5"
                    android:contentDescription="@string/movie_poster_image" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_gravity="top"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <ImageButton
                    android:id="@+id/back_arrow"
                    android:layout_width="?android:attr/actionBarSize"
                    android:layout_height="match_parent"
                    android:src="@drawable/back_arrow"
                    android:contentDescription="@string/back_arrow_description_string" />

                <ImageButton
                    android:id="@+id/settings"
                    android:layout_width="?android:attr/actionBarSize"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/ic_settings_white_24dp"
                    android:paddingEnd="@dimen/general_padding"
                    android:paddingStart="@dimen/general_padding"
                    android:contentDescription="@string/settings_option_image_button_string" />

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/fragment_pager_item_detail"/>


    <!-- A progress bar that will be shown to users to indicate that profile data is loading -->
    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="@dimen/progressbar_size"
        android:layout_height="@dimen/progressbar_size"
        android:layout_gravity="center"
        android:visibility="invisible" />

</android.support.design.widget.CoordinatorLayout>