<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
    android:background="#000000"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_pager_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            card_view:cardCornerRadius="@dimen/card_movie_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RatingBar
                android:id="@+id/rb_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:numStars="5"
                android:stepSize="1.0"
                style="@style/RatingBar"
                android:isIndicator="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/rb_rating">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_string"
                    android:layout_marginLeft="@dimen/pad_16dp"
                    android:textSize="@dimen/txt_20sp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/pad_16dp" />
                <TextView
                    android:id="@+id/release_date_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="10/20/2018"
                    android:maxLines="1"
                    android:textSize="@dimen/txt_20sp"
                    android:layout_weight="1" />
            </LinearLayout>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="@dimen/cardview_default_elevation"
            card_view:cardCornerRadius="@dimen/card_movie_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/overview_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/movie_description_string"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/overview_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/overview_head"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    tools:text="this will be a long movie description"
                    android:textSize="16sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            card_view:cardCornerRadius="@dimen/card_movie_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="@dimen/pad_16dp"
                    android:paddingRight="@dimen/pad_16dp"
                    android:paddingTop="@dimen/pad_16dp"
                    android:text="@string/trailer_string"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/trailer"
                    android:layout_marginLeft="@dimen/pad_16dp"
                    android:clipToPadding="false"
                    android:scrollbars="horizontal"
                    android:layout_marginStart="@dimen/pad_16dp"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/trailer_recycler_view"
                    android:scrollbarStyle="outsideOverlay"
                    android:paddingStart="@dimen/list_side_margin"
                    android:paddingEnd="@dimen/list_side_margin"
                    android:fitsSystemWindows="true"
                    android:paddingLeft="@dimen/list_side_margin"
                    android:paddingRight="@dimen/list_side_margin"
                    android:orientation="horizontal"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    android:fastScrollEnabled="true"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            card_view:cardCornerRadius="@dimen/card_movie_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/reviews_string"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/review_recycler_view"
                        android:scrollbarStyle="outsideOverlay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/list_side_margin"
                        android:paddingEnd="@dimen/list_side_margin"
                        android:fitsSystemWindows="true"
                        android:clipToPadding="false"
                        android:paddingLeft="@dimen/list_side_margin"
                        android:paddingRight="@dimen/list_side_margin"
                        android:scrollbars="horizontal"
                        android:orientation="horizontal"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        android:fastScrollEnabled="true"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
                </ScrollView>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>